--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 django-filter==21.1
-djangorestframework-simplejwt==5.0.0
+djangorestframework-simplejwt==4.8.0
+python-dotenv==0.19.1
